--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -10,7 +10,7 @@
 }
 
 .tags {
-  color: #F27405;
+  color: #f27405;
   opacity: 0.6;
   position: absolute;
   bottom: 0;
@@ -44,7 +44,8 @@
           animation-delay: 1;
 }
 
-.about-page .text-zone {
+.about-page .text-zone,
+.contact-page .text-zone {
   position: absolute;
   left: 10%;
   top: 50%;
@@ -54,17 +55,19 @@
   display: table-cell;
   max-height: 90%;
 }
-.about-page .text-zone h1 {
+.about-page .text-zone h1,
+.contact-page .text-zone h1 {
   font-size: 53px;
   font-family: "Raleway";
-  color: #F27405;
+  color: #f27405;
   font-weight: 400;
   margin-top: 0;
   position: relative;
   margin-bottom: 40px;
   left: 10px;
 }
-.about-page .text-zone h1::before {
+.about-page .text-zone h1::before,
+.contact-page .text-zone h1::before {
   content: "<h1>";
   font-family: "la";
   font-size: 18px;
@@ -74,7 +77,8 @@
   opacity: 0.6;
   line-height: 18px;
 }
-.about-page .text-zone h1::after {
+.about-page .text-zone h1::after,
+.contact-page .text-zone h1::after {
   content: "<h1/>";
   font-family: "la";
   line-height: 18px;
@@ -85,7 +89,8 @@
   opacity: 0.6;
   margin-left: 20px;
 }
-.about-page .text-zone p {
+.about-page .text-zone p,
+.contact-page .text-zone p {
   font-size: 13px;
   color: #fff;
   font-family: sans-serif;
@@ -96,18 +101,22 @@
   -webkit-animation: pulse 1s;
           animation: pulse 1s;
 }
-.about-page .text-zone p:nth-of-type(1) {
+.about-page .text-zone p:nth-of-type(1),
+.contact-page .text-zone p:nth-of-type(1) {
   -webkit-animation-delay: 1.1s;
           animation-delay: 1.1s;
 }
-.about-page .text-zone p:nth-of-type(2) {
+.about-page .text-zone p:nth-of-type(2),
+.contact-page .text-zone p:nth-of-type(2) {
   -webkit-animation-delay: 1.2s;
           animation-delay: 1.2s;
 }
-.about-page .text-zone p:nth-of-type(3) {
+.about-page .text-zone p:nth-of-type(3),
+.contact-page .text-zone p:nth-of-type(3) {
   -webkit-animation-delay: 1.3s;
           animation-delay: 1.3s;
 }
-.about-page .text-zone .text-animate-hover:hover {
+.about-page .text-zone .text-animate-hover:hover,
+.contact-page .text-zone .text-animate-hover:hover {
   color: #fff;
 }/*# sourceMappingURL=layout.css.map */
