--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,18 +1,17 @@
-$primary-color : #F27405;
+$primary-color: #f27405;
 
-.page{
+.page {
     width: 100%;
     height: 100%;
     position: absolute;
-
 }
 
-.top-tags{
+.top-tags {
     bottom: auto;
-    top:35px;
+    top: 35px;
 }
 
-.tags{
+.tags {
     color: $primary-color;
     opacity: 0.6;
     position: absolute;
@@ -20,19 +19,17 @@ $primary-color : #F27405;
     left: 120px;
     font-size: 19px;
     font-family: 'La Belle Aurore';
-
 }
 
-.bottom-tags{
+.bottom-tags {
     margin-bottom: 10px;
 }
 
-.bottom-tag-html{
-    
+.bottom-tag-html {
     margin-left: -30px;
 }
 
-.container{
+.container {
     width: 100%;
     will-change: contents;
     height: 90%;
@@ -47,18 +44,19 @@ $primary-color : #F27405;
     animation-delay: 1;
 }
 
-.about-page{
-    .text-zone{
+.about-page,
+.contact-page {
+    .text-zone {
         position: absolute;
-        left:10%;
-        top:50%;
+        left: 10%;
+        top: 50%;
         transform: translateY(-50%);
         width: 35%;
         vertical-align: middle;
         display: table-cell;
         max-height: 90%;
 
-        h1{
+        h1 {
             font-size: 53px;
             font-family: 'Raleway';
             color: $primary-color;
@@ -68,7 +66,7 @@ $primary-color : #F27405;
             margin-bottom: 40px;
             left: 10px;
 
-            &::before{
+            &::before {
                 content: '<h1>';
                 font-family: 'la';
                 font-size: 18px;
@@ -91,7 +89,7 @@ $primary-color : #F27405;
                 margin-left: 20px;
             }
         }
-        p{
+        p {
             font-size: 13px;
             color: #fff;
             font-family: sans-serif;
@@ -99,22 +97,18 @@ $primary-color : #F27405;
             min-width: fit-content;
             animation: pulse 1s;
 
-            &:nth-of-type(1)
-            {
-                animation-delay:1.1s ;
+            &:nth-of-type(1) {
+                animation-delay: 1.1s;
             }
-            &:nth-of-type(2)
-            {
-                animation-delay:1.2s ;
+            &:nth-of-type(2) {
+                animation-delay: 1.2s;
             }
-            &:nth-of-type(3)
-            {
-                animation-delay:1.3s ;
+            &:nth-of-type(3) {
+                animation-delay: 1.3s;
             }
-
         }
-        .text-animate-hover{
-            &:hover{
+        .text-animate-hover {
+            &:hover {
                 color: #fff;
             }
         }
