--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,6 +1,6 @@
-$primary-color : #F27405;
+$primary-color: #f27405;
 
-.nav-bar{
+.nav-bar {
     background: #181818;
     width: 60px;
     height: 100%;
@@ -8,26 +8,25 @@ $primary-color : #F27405;
     top: 0;
     z-index: 3;
     min-height: 500px;
-    
-    .logo{
+
+    .logo {
         padding: 8px 0;
         display: block;
-        
-        img{
-        display: block;
-        margin: 8px auto;
-        width: 24px;
-        height: auto;
-            
-            &.sub-logo{
+
+        img {
+            display: block;
+            margin: 8px auto;
+            width: 34px;
+            height: auto;
+
+            &.sub-logo {
                 width: 50px;
             }
+        }
     }
+}
 
-    }
-}    
-
-nav{
+nav {
     display: block;
     text-align: center;
     position: absolute;
@@ -36,29 +35,29 @@ nav{
     margin-top: -120px;
     width: 100%;
 
-    a{
+    a {
         font-size: 22px;
         color: #4d4d4e;
         display: block;
-        line-height:51px ;
+        line-height: 51px;
         position: relative;
         text-decoration: none;
 
-        i{
+        i {
             transition: all 0.3s ease-out;
         }
-        &:hover{
+        &:hover {
             color: $primary-color;
 
-            svg{
+            svg {
                 opacity: 0;
             }
 
-            &::after{
+            &::after {
                 opacity: 1;
             }
         }
-        &::after{
+        &::after {
             content: '';
             font-size: 9px;
             letter-spacing: 2px;
@@ -71,27 +70,47 @@ nav{
             transition: all 0.3 ease-out;
         }
     }
-        a.home-link{
-            &::after{
-                content: 'Home';
-            }
+    a.home-link {
+        &::after {
+            content: 'Home';
         }
-        a.about-link{
-            &::after{
-                content: 'About';
-            }
+    }
+    a.projects-link {
+        &::after {
+            content: 'Projects';
         }
-        a.contact-link{
-            &::after{
-                content: "Contact";
-            }
+    }
+    a.about-link {
+        &::after {
+            content: 'About';
         }
-        a.active{
-            .react-icons{
-                color: $primary-color;
-            }
+    }
+    a.contact-link {
+        &::after {
+            content: 'Contact';
         }
-    ul{
+    }
+    a.linkedin {
+        &::after {
+            content: 'Linkedin';
+        }
+    }
+    a.GitHub {
+        &::after {
+            content: 'GitHub';
+        }
+    }
+    a.Instagram {
+        &::after {
+            content: 'Insta';
+        }
+    }
+    a.active {
+        .react-icons {
+            color: $primary-color;
+        }
+    }
+    ul {
         position: relative;
         bottom: 20px;
         width: 100%;
@@ -99,20 +118,19 @@ nav{
         padding: 0;
         list-style: none;
         text-align: center;
-        margin-top:200px;
+        margin-top: 140px;
 
-        li{
-            a{
+        li {
+            a {
                 padding: 7px 0;
                 display: block;
                 font-size: 15px;
                 line-height: 16px;
 
-                &:hover svg{
+                &:hover svg {
                     color: $primary-color;
                 }
             }
         }
     }
-
 }
