--- a/src/components/AnimatedLetters/AnimatedLetters.scss
+++ b/src/components/AnimatedLetters/AnimatedLetters.scss
@@ -1,4 +1,4 @@
-$primary-color :#F27405;
+$primary-color: #f27405;
 .text-animate {
     display: inline-block;
     opacity: 0;
@@ -7,21 +7,21 @@ $primary-color :#F27405;
     animation-delay: 1s;
     animation-fill-mode: forwards;
     min-width: 10px;
-  }
-  
-  .text-animate-hover {
+}
+
+.text-animate-hover {
     min-width: 10px;
     display: inline-block;
     animation-fill-mode: both;
-  
+
     &:hover {
-      animation: rubberBand 1s;
-      color: $primary-color;
+        animation: rubberBand 1s;
+        color: $primary-color;
     }
-  }
-  
-  @for $i from 1 through 35 {
+}
+
+@for $i from 1 through 35 {
     .text-animate._#{$i} {
-      animation-delay: #{$i / 10}s;
+        animation-delay: #{$i / 10}s;
     }
-  }
+}
