--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -79,10 +79,10 @@ $primary-color: #f27405;
         animation: fadeIn 1s 1.8s backwards;
         white-space: nowrap;
 
-        &:hover {
-            background: $primary-color;
-            color: #333;
-        }
+        // &:hover {
+        //     background: $primary-color;
+        //     color: #333;
+        // }
     }
     .CV {
         margin-left: 4px;
@@ -96,67 +96,3 @@ $primary-color: #f27405;
     // height: 10px;
     transform: rotateZ(-7deg) !important;
 }
-
-// .home-page {
-//     .text-zone {
-//       position: absolute;
-//       left: 10%;
-//       top: 50%;
-//       transform: translateY(-50%);
-//       width: 40%;
-//       max-height: 90%;
-//     }
-
-//       &:before {
-//         content: '<h1>';
-//         font-family: 'La Belle Aurore', cursive;
-//         color: #ffd700;
-//         font-size: 18px;
-//         position: absolute;
-//         margin-top: -40px;
-//         left: -15px;
-//         opacity: 0.6;
-//       }
-
-//       &:after {
-//         content: '<h1/>';
-//         font-family: 'La Belle Aurore', cursive;
-//         color: #ffd700;
-//         font-size: 18px;
-//         position: absolute;
-//         margin-top: 18px;
-//         margin-left: 20px;
-//         animation: fadeIn 1s 1.7s backwards;
-//         opacity: 0.6;
-//       }
-
-//       img {
-//         margin-left: 20px;
-//         opacity: 0;
-//         width: 32px;
-//         height: auto;
-//         animation: rotateIn 1s linear both;
-//         animation-delay: 1.4s;
-//       }
-//     }
-
-//     .flat-button {
-//       color: #ffd700;
-//       font-size: 13px;
-//       font-weight: 400;
-//       letter-spacing: 4px;
-//       font-family: sans-serif;
-//       text-decoration: none;
-//       padding: 10px 18px;
-//       border: 1px solid #ffd700;
-//       margin-top: 25px;
-//       float: left;
-//       animation: fadeInAnimation 1s 1.8s backwards;
-//       white-space: nowrap;
-
-//       &:hover {
-//         background: #ffd700;
-//         color: #333;
-//       }
-//     }
-//   }
