--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,6 +1,11 @@
 $primary-color: #f27405;
 
 .home-page {
+    .text-animate-hover{
+        &:hover{
+        color: #f27405;
+        }
+    }
     .text-zone {
         position: absolute;
         left: 10%;
