--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -57,6 +57,7 @@ nav {
             }
 
             &::after {
+                font-size: 12.5px;
                 opacity: 1;
             }
         }
