Changed The H svg

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -45,9 +45,10 @@
   margin: 0;
   padding: 0;
   position: relative;
-  width: 70px;
-  margin-right: -10px;
+  width: 50px;
+  margin-right: -2px;
   margin-left: 20px;
+  top: 5px;
   opacity: 1;
   height: auto;
   -webkit-animation: rotateIn 1.55s linear both;
@@ -85,8 +86,8 @@
 }
 
 .h_main {
-  margin-left: 700px;
-  margin-top: 50px;
-  width: 600px;
-  transform: rotateZ(6deg) !important;
+  margin-left: 750px;
+  margin-top: 13px;
+  width: 500px;
+  transform: rotateZ(10deg) !important;
 }/*# sourceMappingURL=home.css.map */
