--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -70,4 +70,11 @@
   float: right;
   text-align: center;
   margin-right: 10px;
+}
+
+.SnakeGame {
+  position: absolute;
+  margin-top: 140px;
+  margin-left: 1000px;
+  z-index: 2;
 }/*# sourceMappingURL=Contact.css.map */
