--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -76,3 +76,10 @@
         margin-right: 10px;
     }
 }
+
+.SnakeGame{
+    position: absolute;
+    margin-top: 140px;
+    margin-left: 1000px;
+    z-index: 2;
+}
