--- a/src/components/ProjectPage/ProjectItem/ProjectItem.css
+++ b/src/components/ProjectPage/ProjectItem/ProjectItem.css
@@ -1,1 +1,9 @@
-/*# sourceMappingURL=ProjectItem.css.map */
+.bgImage {
+  opacity: 0.65;
+  transition: transform 0.75s, opacity 0.75s;
+}
+.bgImage:hover {
+  border-radius: 5px;
+  opacity: 1;
+  transform: scale(2);
+}/*# sourceMappingURL=ProjectItem.css.map */
